--- a/src/main/resources/static/css/show.css
+++ b/src/main/resources/static/css/show.css
@@ -3,7 +3,10 @@ html, body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: "Montserrat", serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
     width: 100%;
     height: 100%;
     background: linear-gradient(135deg, #c9b4ff, #8942ff, #4b00bd, #19004c); /* Градиент */
@@ -24,86 +27,136 @@ html, body {
     }
 }
 
-/* Стили заголовков */
-h1 {
+.header-title {
     color: white;
     text-align: center;
-    margin-top: 20px;
+    margin: 50px;
     font-size: 2.5rem;
-    font-weight: 400;
-    font-family: Verdana, sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 
 /* Контейнер таблицы */
 .table-container {
-    width: 90%;
+    width: 80%;
     margin: 40px auto 20px auto;
     background-color: rgba(255, 255, 255, 0.1); /* Полупрозрачный фон */
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Тень */
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2); /* Тень */
     border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 /* Стили для таблиц */
-table {
+.styled-table{
     width: 100%;
     border-collapse: collapse;
-    margin: 20px 0;
+    margin: 10px 0;
+    /*table-layout: fixed;*/
 }
 
-table thead {
-    border-bottom: 2px solid rgba(255, 255, 255, 0.4); /* Линия между заголовком таблицы и содержимым */
+.styled-table thead {
+    background-color: rgba(241, 233, 255, 0.1);
+    text-transform: uppercase;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
 
-table th, table td {
+.styled-table tbody td {
+    color: white;
+    text-align: left;
+    padding: 10px; /* Плавный переход */
+    word-wrap: break-word;
+    white-space: nowrap;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2); /* Границы между ячейками */
+    transition: all 0.3s ease; /* Плавный переход общего состояния строки */
+}
+
+.styled-table thead th {
     color: white;
     text-align: left;
     padding: 10px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    font-weight: 500;
+    word-wrap: break-word;
+    white-space: nowrap;
 }
 
-table th {
-    font-weight: 600;
-    text-transform: uppercase;
+.styled-table thead th:first-child {
+    border-top-left-radius: 15px;
 }
 
-table tbody tr:hover {
-    background-color: rgba(255, 255, 255, 0.1); /* Эффект при наведении */
-    transform: scale(1.01); /* Легкое увеличение */
-    transition: all 0.3s ease-in-out;
+.styled-table thead th:last-child {
+    border-top-right-radius: 15px;
 }
 
-/* Область футера */
-.footer {
-    text-align: center;
+.styled-table tbody tr:hover {
+    transform: scale(1.01);
+    border-radius: 8px;
+    background-color: rgba(240, 240, 240, 0.05); /* Светлый фон строки */
+    z-index: 1; /* Повышение уровня отображения строки */
+}
+
+.styled-table tbody tr:hover td:first-child {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.styled-table tbody tr:hover td:last-child {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+}
+
+
+.actions-cell {
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px; /* Расстояние между кнопками */
+}
+
+.edit-btn {
+    background-color: #55b1c1;
+}
+
+.edit-btn:hover {
+    background-color: #448f9c; /* Более тёмный цвет при наведении */
+}
+
+.delete-btn {
+    background-color: #f44336;
+}
+
+.delete-btn:hover {
+    background-color: #ae2f26;
+}
+
+
+/* Стили для контейнера */
+.add-button-container {
+    display: flex; /* Включаем flexbox */
+    justify-content: center; /* Центрируем по горизонтали */
     margin-top: 20px;
 }
 
-/* Оформление кнопок */
+/* Стили для кнопки */
+.add-btn {
+    background-color: #4CAF50;
+}
+
+.add-btn:hover {
+    background-color: #45a049; /* Более тёмный цвет при наведении */
+    transform: scale(1.05);
+}
+
 button {
-    padding: 10px 20px;
-    font-size: 1rem;
-    font-weight: 600;
-    color: white;
-    border: 2px solid white;
-    background-color: transparent;
-    border-radius: 8px;
-    transition: 0.3s ease all;
+    padding: 10px 20px; /* Внутренние отступы кнопки */
+    font-size: 14px;
+    border-radius: 5px;
+    border: none;
     cursor: pointer;
-}
-
-button:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-    text-transform: uppercase;
-    transform: scale(1.05); /* Легкое увеличение */
-}
-
-/* Ссылки внутри кнопок */
-a {
-    text-decoration: none;
-}
-
-a:hover button {
-    background-color: rgba(255, 255, 255, 0.5);
+    transition: all 0.3s ease;
+    color: white;
+    text-align: center;
 }
