Refactor controllers and add user-specific functionality.
Controllers were reorganized into user and admin-specific modules, enhancing route clarity and separation of concerns. Added methods to support user-specific operations like displaying all books, available books, and user borrowings. Introduced a BorrowingService to manage borrowing logic and enforce business rules, ensuring robust validations.

--- a/src/main/resources/templates/admin/updates/update-person.html
+++ b/src/main/resources/templates/admin/updates/update-person.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/add-update.css">
 </head>
 <body>
-<h1>Update Publisher</h1>
+<h1>Update User</h1>
 <form th:action="@{/persons/update}" th:object="${person}" method="post">
     <!-- Скрытое поле для ID -->
     <input type="hidden" th:field="*{id}" />
