--- a/src/main/resources/static/css/main-page.css
+++ b/src/main/resources/static/css/main-page.css
@@ -1,56 +1,78 @@
 /* Основные стили */
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #f5f5f5;
+html, body {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Montserrat", serif;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #c9b4ff, #8942ff, #4b00bd, #19004c);
+    background-size: 200% 200%;
+    animation: gradient-animation 12s infinite alternate;
 }
 
-h1 {
-    margin-bottom: 20px;
-    font-size: 24px;
-    color: #333;
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
-.role-buttons {
+.header-title {
+    color: white;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 600;
+    margin: 40px 0;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.buttons {
     display: flex;
+    justify-content: center; /* Центрирование по горизонтали */
+    align-items: center; /* Центрирование по вертикали, если требуется */
     gap: 20px;
+    margin-top: 50px;
     margin-bottom: 30px;
+    text-align: center;
 }
 
-button {
+.btn {
+    display: inline-block;
+    text-decoration: none;
     padding: 10px 20px;
-    font-size: 16px;
-    border: none;
+    margin: 10px;
+    font-size: 1.2rem;
+    color: white;
+    background-color: rgba(75, 0, 189, 0.8);
     border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-transform: uppercase;
+    font-weight: 500;
 }
 
-button:hover {
-    background-color: #ddd;
+.btn:hover {
+    background-color: #8942ff;
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
-button.librarian {
-    background-color: #4caf50; /* Зеленая кнопка */
-    color: #fff;
+.btn:active {
+    transform: scale(0.95);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
 }
 
-button.librarian:hover {
-    background-color: #45a049; /* Темнее при наведении */
-}
-
-button.user {
-    background-color: #2196f3; /* Синяя кнопка */
-    color: #fff;
-}
-
-button.user:hover {
-    background-color: #0b7dda; /* Темнее при наведении */
+.btn:focus {
+    outline: none;
+    box-shadow: 0 0 10px rgba(137, 66, 255, 0.6), 0 0 20px rgba(137, 66, 255, 0.4);
 }
 
 .email-form {
@@ -71,3 +93,4 @@ button.user:hover {
 .email-form button {
     margin-top: 10px;
 }
+
