--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,23 +7,23 @@
   <link rel="stylesheet" href="/css/main-page.css"> <!-- Подключение CSS -->
 </head>
 <body>
-<h1>Выберите режим для входа</h1>
+<h1 class="header-title">Pick an application mode</h1>
 
 <!-- Кнопки выбора режима -->
-<div class="role-buttons">
-  <button class="librarian" onclick="enterAsLibrarian()">Режим Библиотекаря</button>
-  <button class="user" onclick="showEmailForm()">Режим Пользователя</button>
+<div class="buttons">
+  <button class="btn" onclick="enterAsLibrarian()">Librarian</button>
+  <button class="btn" onclick="showEmailForm()">User</button>
 </div>
 
 <!-- Форма для ввода email -->
 <div class="email-form" id="email-form">
   <form action="/user" method="post">
-    <label for="email">Введите вашу почту:</label>
+    <label for="email">Enter your email:</label>
     <input type="email" id="email" name="email" placeholder="example@example.com" required/>
-    <button type="submit" class="user">Войти</button>
+    <button type="submit" class="user">Enter</button>
   </form>
 </div>
 
-<script src="/js/user_interaction_handlers.js"></script> <!-- Подключение JavaScript -->
+<script src="/js/user_interaction_handlers.js"></script>
 </body>
 </html>
