--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная страница</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap">
   <link rel="stylesheet" href="/css/main-page.css"> <!-- Подключение CSS -->
 </head>
 <body>
 <h1 class="header-title">Pick an application mode</h1>
 
 <!-- Кнопки выбора режима -->
-<div class="buttons">
-  <button class="btn" onclick="enterAsLibrarian()">Librarian</button>
-  <button class="btn" onclick="showEmailForm()">User</button>
+<div class="button-container">
+  <button class="button" onclick="enterAsLibrarian()">Librarian</button>
+  <button class="button" onclick="showEmailForm()">User</button>
 </div>
 
 <!-- Форма для ввода email -->
