--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Dashboard - Library System</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap">
   <link rel="stylesheet" href="/css/main-page.css"> <!-- Подключение стилей -->
 </head>
 <body>
@@ -15,10 +16,10 @@
   <!-- Основной контент -->
   <main>
     <!-- Контейнер для кнопок -->
-    <div class="role-buttons" style="text-align: center; margin-top: 50px;">
-      <a class="add-btn" th:href="@{'/user/books'}">All books</a>
-      <a class="add-btn" th:href="@{'/user/available-books'}">Available books</a>
-      <a class="add-btn" th:href="@{'/user/' + ${userId} + '/borrowings'}">My Borrowings</a>
+    <div class="button-container" style="text-align: center; margin-top: 50px;">
+      <a class="button" th:href="@{'/user/books'}">All books</a>
+      <a class="button" th:href="@{'/user/available-books'}">Available books</a>
+      <a class="button" th:href="@{'/user/' + ${userId} + '/borrowings'}">My Borrowings</a>
     </div>
   </main>
 </body>
