--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -18,7 +18,7 @@
     <!-- Контейнер для кнопок -->
     <div class="button-container" style="text-align: center; margin-top: 50px;">
       <a class="button" th:href="@{'/books'}">Books</a>
-      <a class="button" th:href="@{'/persons'}">Persons</a>
+      <a class="button" th:href="@{'/users'}">Users</a>
       <a class="button" th:href="@{'/borrowings'}">Borrowings</a>
       <a class="button" th:href="@{'/copies'}">Copies</a>
       <a class="button" th:href="@{'/librarians'}">Librariants</a>
