--- a/src/main/resources/templates/admin/adds/add-librarian.html
+++ b/src/main/resources/templates/admin/adds/add-librarian.html
@@ -11,12 +11,12 @@
 <form th:action="@{/librarians/add}" th:object="${librarian}" method="post">
     <!-- Поле выбора связанного пользователя с использованием datalist -->
     <div>
-        <label for="person">Person:</label>
-        <input list="usersList" id="person" th:field="*{person.id}" placeholder="Select person or type">
+        <label for="user">Person:</label>
+        <input list="usersList" id="user" th:field="*{user.id}" placeholder="Select user or type">
         <datalist id="usersList">
-            <option th:each="person : ${users}"
-                    th:value="${person.id}"
-                    th:text="${person.name + ' (' + person.email + ')'}">
+            <option th:each="user : ${users}"
+                    th:value="${user.id}"
+                    th:text="${user.name + ' (' + user.email + ')'}">
             </option>
         </datalist>
     </div>
